--- a/frontend/src/screens/Account/Account.module.scss
+++ b/frontend/src/screens/Account/Account.module.scss
@@ -46,6 +46,9 @@ body {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
+	
+	position: relative;
+	top: 100px;
 }
 
 .content {
